--- a/package.json
+++ b/package.json
@@ -10,58 +10,72 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.18",
-    "@mui/lab": "^5.0.0-alpha.143",
-    "@mui/material": "^5.14.8",
-    "@mui/x-date-pickers": "^6.13.0",
-    "@nivo/bar": "^0.83.0",
-    "@nivo/bump": "^0.83.0",
-    "@nivo/calendar": "^0.83.0",
-    "@nivo/core": "^0.83.0",
-    "@nivo/network": "^0.83.0",
-    "@nivo/radial-bar": "^0.83.0",
-    "@observablehq/plot": "^0.6.11",
-    "@react-oauth/google": "^0.11.1",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/cal-heatmap": "^3.5.37",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/lab": "^5.0.0-alpha.169",
+    "@mui/material": "^5.15.14",
+    "@mui/x-date-pickers": "^7.1.0",
+    "@nivo/bar": "^0.85.1",
+    "@nivo/bump": "^0.85.1",
+    "@nivo/calendar": "^0.85.1",
+    "@nivo/core": "^0.85.1",
+    "@nivo/network": "^0.85.1",
+    "@nivo/radial-bar": "^0.85.1",
+    "@observablehq/plot": "^0.6.14",
+    "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.2",
+    "@types/cal-heatmap": "^3.5.39",
     "@types/react-icons": "^3.0.0",
-    "@uiw/react-heat-map": "^2.1.1",
-    "@uiw/react-tooltip": "^4.22.0",
+    "@uiw/react-heat-map": "^2.2.2",
+    "@uiw/react-tooltip": "^4.22.3",
     "animate.css": "^4.1.1",
-    "autoprefixer": "^10.4.15",
-    "axios": "^1.4.0",
-    "cal-heatmap": "^4.2.3",
-    "d3": "^7.8.5",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
+    "cal-heatmap": "^4.2.4",
+    "d3": "^7.9.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
-    "firebase": "^10.2.0",
+    "dompurify": "^3.0.11",
+    "file-icons-js": "^1.1.0",
+    "firebase": "^10.9.0",
     "font-awesome": "^4.7.0",
-    "formik": "^2.4.3",
-    "google-auth-library": "^9.0.0",
+    "formik": "^2.4.5",
+    "framer-motion": "^11.0.24",
+    "github-markdown-css": "^5.5.1",
+    "google-auth-library": "^9.7.0",
     "highlight.js": "^11.9.0",
     "js-cookie": "^3.0.5",
-    "postcss": "^8.4.28",
+    "marked": "^12.0.1",
+    "moment": "^2.30.1",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
-    "react-calendar": "^4.6.0",
+    "react-calendar": "^4.8.0",
     "react-calendar-heatmap": "^1.9.0",
     "react-d3-library": "^1.1.8",
+    "react-d3-tree": "^3.6.2",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0",
-    "react-select": "^5.7.4",
+    "react-file-icon": "^1.4.0",
+    "react-markdown": "^9.0.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "react-syntax-highlighter": "^15.5.0",
-    "react-tooltip": "^5.21.5",
+    "react-tooltip": "^5.26.3",
     "reactjs-calendar-heatmap": "^0.2.3",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2",
-    "socket.io-client": "^4.7.2",
-    "sweetalert2": "^11.7.27",
-    "tailwindcss": "^3.3.3",
-    "three": "^0.156.1",
-    "vite-plugin-windicss": "^1.9.1",
-    "yup": "^1.2.0"
+    "redux-thunk": "^3.1.0",
+    "remark-gfm": "^4.0.0",
+    "socket.io-client": "^4.7.5",
+    "sweetalert2": "^11.10.7",
+    "tailwindcss": "^3.4.3",
+    "three": "^0.162.0",
+    "vite-plugin-windicss": "^1.9.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@ricons/antd": "^0.12.0",
@@ -73,21 +87,23 @@
     "@ricons/material": "^0.12.0",
     "@ricons/tabler": "^0.12.0",
     "@ricons/utils": "^0.1.6",
-    "@types/d3": "^7.4.1",
-    "@types/js-cookie": "^3.0.3",
-    "@types/react": "^18.2.15",
-    "@types/react-calendar-heatmap": "^1.6.4",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-syntax-highlighter": "^15.5.9",
+    "@types/d3": "^7.4.3",
+    "@types/dompurify": "^3.0.5",
+    "@types/js-cookie": "^3.0.6",
+    "@types/react": "^18.2.73",
+    "@types/react-calendar-heatmap": "^1.6.7",
+    "@types/react-dom": "^18.2.23",
+    "@types/react-file-icon": "^1.0.4",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@types/redux-persist": "^4.3.1",
-    "@types/three": "^0.155.1",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
+    "@types/three": "^0.162.0",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "typescript": "^5.4.3",
+    "vite": "^5.2.6"
   }
 }
