--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.26.3",
     "reactjs-calendar-heatmap": "^0.2.3",
