--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "cal-heatmap": "^4.2.4",
+    "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
@@ -45,11 +46,12 @@
     "firebase": "^10.9.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.4.5",
-    "framer-motion": "^11.0.24",
+    "framer-motion": "^11.1.7",
     "github-markdown-css": "^5.5.1",
     "google-auth-library": "^9.7.0",
     "highlight.js": "^11.9.0",
     "js-cookie": "^3.0.5",
+    "markdown-to-jsx": "^7.4.7",
     "marked": "^12.0.1",
     "moment": "^2.30.1",
     "postcss": "^8.4.38",
@@ -73,6 +75,7 @@
     "remark-gfm": "^4.0.0",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.7",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "three": "^0.162.0",
     "vite-plugin-windicss": "^1.9.3",
