--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "prjmanager",
+  "name": "prjmanager-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "start": "serve -s build -l 3000",
-    "tsc:watch": "tsc --watch",
+    "build": "npx tsc && vite build",
+    "start": "serve -s build -l ${PORT:-3000}",
+    "tsc:watch": "set NODE_OPTIONS=--max-old-space-size=8192 && npx tsc --watch",
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
@@ -80,6 +80,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "remark-gfm": "^4.0.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "serve": "^14.2.3",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.11.0",
