--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx tsc && vite build",
+    "build": "set NODE_OPTIONS=--max-old-space-size=8192 && npx tsc && vite build",
     "start": "serve -s build -l ${PORT:-3000}",
     "tsc:watch": "set NODE_OPTIONS=--max-old-space-size=8192 && npx tsc --watch",
     "heroku-postbuild": "npm run build"
