--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "set NODE_OPTIONS=--max-old-space-size=8192 && npx tsc && vite build",
-    "start": "serve -s build -l ${PORT:-3000}",
+    "start": "node server.js",
     "tsc:watch": "set NODE_OPTIONS=--max-old-space-size=8192 && npx tsc --watch",
     "heroku-postbuild": "npm run build"
   },
@@ -46,6 +46,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "dompurify": "^3.1.3",
+    "express": "^4.19.2",
     "file-icons-js": "^1.1.0",
     "firebase": "^10.11.1",
     "font-awesome": "^4.7.0",
@@ -58,6 +59,7 @@
     "markdown-to-jsx": "^7.4.7",
     "marked": "^12.0.2",
     "moment": "^2.30.1",
+    "path": "^0.12.7",
     "postcss": "^8.4.38",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.5",
@@ -87,6 +89,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "three": "^0.164.1",
+    "url": "^0.11.3",
     "vis-timeline": "^7.7.3",
     "vite-plugin-windicss": "^1.9.3",
     "yup": "^1.4.0"
